--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<center>
+        <h1 style="color: white;">Welcome to the new Era of Artificial intelligence</h1>
+    </center>
 </body>
 
 </html>
